--- a/assets/css/single-listing.scss
+++ b/assets/css/single-listing.scss
@@ -169,6 +169,7 @@
         border-radius: 6px;
         text-transform: uppercase;
         margin-top: 15px;
+        line-height: 1;
     }
 
     .api-property-description {
