--- a/assets/css/listing-cards.scss
+++ b/assets/css/listing-cards.scss
@@ -41,6 +41,10 @@
     grid-template-columns: repeat(1, 1fr);
     gap: 20px;
 
+    @media (min-width: 768px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
     @media (min-width: 1024px) {
         grid-template-columns: repeat(3, 1fr);
     }
