--- a/assets/css/single-listing.scss
+++ b/assets/css/single-listing.scss
@@ -108,6 +108,7 @@
 
         @media (max-width: 1023px) {
             width: 100%;
+            margin-top: 30px;
         }
 
         .contact-intro,
