--- a/assets/css/listing-cards.scss
+++ b/assets/css/listing-cards.scss
@@ -16,10 +16,16 @@
             height: 45px;
             color: #252525;
             border-color: #252525;
-            width: 300px;
+            width: 300px !important;
             max-width: 100%;
             height: 45px;
+            appearance: auto;
+            font-size: 16px;
         }
+    }
+
+    #listings-pagination-container {
+        text-align: left;
     }
 
     .button-api-listing {
