--- a/assets/css/single-listing.scss
+++ b/assets/css/single-listing.scss
@@ -77,6 +77,7 @@
         .gallery-bg-img {
             background-size: cover;
             background-position: center;
+            display: block;
         }
 
         .slick-prev,
