--- a/assets/css/single-listing.scss
+++ b/assets/css/single-listing.scss
@@ -9,12 +9,27 @@
         padding: 0 15px;
     }
 
+    .no-property-selected {
+        width: 100%;
+        text-align: center;
+        padding-top: 150px;
+        padding-bottom: 150px;
+
+        h3 {
+            font-size: 32px;
+            font-family: 'Arial', sans-serif;
+            color: #252525;
+            text-transform: uppercase;
+        }
+    }
+
     .api-property-title {
         width: 100%;
         text-align: center;
         margin-bottom: 15px;
         font-size: 32px;
     }
+
     .api-property-listing-number {
         text-align: center;
         margin: 0;
@@ -45,6 +60,10 @@
         @media (max-width: 1023px) {
             flex-flow: column;
         }
+    }
+
+    .api-property-the-content {
+        color: #252525;
     }
 
     .api-property-gallery {
