--- a/assets/css/listing-cards.scss
+++ b/assets/css/listing-cards.scss
@@ -146,6 +146,22 @@
         background-position: center;
         min-height: 350px;
         position: relative;
+        overflow: hidden;
+
+        .listing-banner {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) rotate(-45deg);
+            width: 150%;
+            background-color: #1b5774;
+            color: white;
+            padding: 15px 20px;
+            font-weight: bold;
+            font-size: 34px;
+            font-family: 'Arial', sans-serif;
+            text-align: center;
+        }
     }
 
     .reduced-price {
