--- a/assets/css/listing-cards.scss
+++ b/assets/css/listing-cards.scss
@@ -3,7 +3,8 @@
     margin: 0 auto;
     padding: 15px;
 
-    .sort-form {
+    .sort-form,
+    .sort-form-classic {
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
