--- a/assets/css/single-listing.scss
+++ b/assets/css/single-listing.scss
@@ -234,6 +234,7 @@
             width: 100%;
             padding: 15px 0;
             border-bottom: 2px solid #ccc;
+            border-top: 0 !important;
         }
     }
 
