--- a/assets/css/listing-cards.scss
+++ b/assets/css/listing-cards.scss
@@ -223,6 +223,10 @@
         min-height: 350px;
         padding: 15px;
         text-align: left;
+
+        a {
+            text-decoration: none !important;
+        }
     }
 
     .meta-data,
